Fix configuration file template and improve test script

--- a/templates/mpd.conf.j2
+++ b/templates/mpd.conf.j2
@@ -9,10 +9,10 @@ user                    "{{ mpd_user }}"
 bind_to_address         "{{ mpd_bind_to_address }}"
 log_file                "syslog"
 
-restore_paused          "{{ mpd_restore_paused }}"
-auto_update             "{{ mpd_auto_update }}"
-follow_inside_symlinks  "{{ mpd_follow_inside_symlinks }}"
-follow_outside_symlinks "{{ mpd_follow_outside_symlinks }}"
+restore_paused          "{% if mpd_restore_paused %}yes{% else %}no{% endif %}"
+auto_update             "{% if mpd_auto_update %}yes{% else %}no{% endif %}"
+follow_inside_symlinks  "{% if mpd_follow_inside_symlinks %}yes{% else %}no{% endif %}"
+follow_outside_symlinks "{% if mpd_follow_outside_symlinks %}yes{% else %}no{% endif %}"
 
 zeroconf_enabled        "yes"
 zeroconf_name           "{{ mpd_name }}"
