--- a/templates/mpd.conf.j2
+++ b/templates/mpd.conf.j2
@@ -6,6 +6,7 @@ sticker_file            "{{ mpd_sticker_file }}"
 state_file              "{{ mpd_state_file }}"
 
 user                    "{{ mpd_user }}"
+group                   "{{ mpd_user }}"
 bind_to_address         "{{ mpd_bind_to_address }}"
 log_file                "syslog"
 
